Fixed medium alignment

--- a/src/assets/scss/custom/_navigation.scss
+++ b/src/assets/scss/custom/_navigation.scss
@@ -45,7 +45,7 @@
 }
 
 
-
+// Large
 @media only screen and (min-width: 64.063em) and (max-width: 90em) {
     
 .top-bar {
@@ -69,7 +69,7 @@
     
 }
 
-
+// Medium
 @media only screen and (min-width: 40.063em) and (max-width: 64em) { 
     
  .top-bar {
@@ -91,11 +91,12 @@
     max-width: 120px;
     height: auto;
     padding: 5;
-    margin-left: 110px;
+    margin-left: 0;
 
 }
     
 .top-bar-right {
+    float: right;
     margin-left: 30px;
     top: 100px;
 }
@@ -110,6 +111,7 @@
     
 }
 
+// Small
 @media only screen and (max-width: 40em) { 
  .top-bar-right li a {
     color: $white;
